src/style.css
div {
  margin: 1em;
}

div#buttons {
  background-color: rgb(165, 221, 221);
  padding: 1em;
  width: 30%;
}

h1 {
  font-size: 16pt;
  margin: 1em;
}

h3 {
  margin: 1em;
}

li {
  list-style: none;
  padding-bottom: 2em;
}

dt, dd {
  display: inline;
  padding-right: 0.5em;
}

dd {
  font-family: monospace;
}

button,
input.search {
  margin-right: 1em;
  margin-bottom: 1em;
  padding: 0.5em;
  border-radius: 0.5em;
}

fieldset.tags {
  padding-top: 1em;
}

fieldset.tags > legend {
  float: left;
  margin-right: .75rem;
}

fieldset.tags > label {
  display: inline-flex;
  align-items: center;
  gap: .25rem;
  margin-right: .75rem;
}

fieldset.tags::after {
  content: "";
  display: table;
  clear: both;
}

